# BookMS

./: .gitignore  CMakeLists.txt  README.md
data/: bookms.db
res/: icon_logo.rc  resources.qrc
src/: main.cpp
src/dao/: BookDAO.cpp  BookDAO.h  LoanDAO.cpp  LoanDAO.h  UserDAO.cpp  UserDAO.h
src/model/: Book.cpp  Book.h  User.cpp  User.h  entity.h
src/service/: BookService.cpp  BookService.h  Environ.cpp  Environ.h  LoanService.cpp  LoanService.h  PwdUtils.cpp  UserService.cpp  UserService.h  datetime.cpp  datetime.h
src/ui/: AuthDlg.h  WidgetPublicMethod.cpp  WidgetPublicMethod.h
src/ui/admin/: AdminDashboard.cpp  AdminDashboard.h  AdminDashboard.ui  BookAddForm.cpp  BookAddForm.h  BookAddForm.ui  BookDataForm.cpp  BookDataForm.h  BookDataForm.ui  BookEditPanelOfAdmin.cpp  BookEditPanelOfAdmin.h  BookMgrForm.cpp  BookMgrForm.h  BookUpdateDlg.cpp  BookUpdateDlg.h  BookUpdateDlg.ui  LoanAddForm.cpp  LoanAddForm.h  LoanAddForm.ui  LoanMgrForm.cpp  LoanMgrForm.h  LoanMgrForm.ui  MenuFormAdmin.cpp  MenuFormAdmin.h  MenuFormAdmin.ui  UserAddForm.cpp  UserAddForm.h  UserAddForm.ui  UserDataForm.cpp  UserDataForm.h  UserDataForm.ui  UserMgrForm.cpp  UserMgrForm.h  UserMgrForm.ui  UserPermissionForm.cpp  UserPermissionForm.h  UserPermissionForm.ui
src/ui/public/: BookSelectForm.cpp  BookSelectForm.h  BookSelectForm.ui  LoginDlg.cpp  LoginDlg.h  LoginDlg.ui  PerAccCancelForm.cpp  PerAccCancelForm.h  PerAccCancelForm.ui  PerAccEditForm.cpp  PerAccEditForm.h  PerAccEditForm.ui  SignupDlg.cpp  SignupDlg.h  SignupDlg.ui
src/ui/reader/: BorrowPanelOfReader.cpp  BorrowPanelOfReader.h  MenuFormReader.cpp  MenuFormReader.h  MenuFormReader.ui  ReaderHomepage.cpp  ReaderHomepage.h  ReaderHomepage.ui
